# kr-data-agent

./: README.md
kr_bq_agent/: .env  .env.example  __init__.py  prompts.py
kr_bq_agent/kr_bq_agent/: .env.example  agent.py  pyproject.toml
kr_bq_agent/kr_bq_agent/sub_agents/bqml_agent/: agent.py  prompts.py
kr_bq_agent/kr_bq_agent/sub_agents/data_analytics_agent/: prompts.py
kr_bq_agent/kr_bq_agent/sub_agents/data_management_agent/: agent.py  prompts.py
kr_bq_agent/kr_bq_agent/sub_agents/visualization_agent/: agent.py  tools.py
kr_bq_agent/sub_agents/: .env  .env.example  __init__.py
kr_bq_agent/sub_agents/bqml_agent/: prompts.py
kr_bq_agent/sub_agents/data_analytics_agent/: agent.py  prompts.py
kr_bq_agent/sub_agents/data_management_agent/: prompts.py
kr_bq_agent/sub_agents/visualization_agent/: prompts.py  tools.py
